--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  margin: 0;
+  box-sizing: border-box;
+  background-color: rgb(241, 245, 241);
+}
